[gd_scene load_steps=10 format=2]

[ext_resource path="res://Button.gd" type="Script" id=1]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="CylinderShape" id=2]
radius = 0.0436689
height = 1.59356

[sub_resource type="Animation" id=3]
resource_name = "Press"
tracks/0/type = "transform"
tracks/0/path = NodePath("Area/MeshInstanceButton")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray(  )
tracks/1/type = "value"
tracks/1/path = NodePath("Area/MeshInstanceButton:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -3.03493e-008, -0.694309 ), Vector3( 0, -1.83194e-008, -0.419098 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area/MeshInstanceButton:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.75, 0.75, 0.5 ), Vector3( 0.75, 0.75, 0.4 ) ]
}
tracks/3/type = "transform"
tracks/3/path = NodePath("Area/CollisionShape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = PoolRealArray(  )
tracks/4/type = "value"
tracks/4/path = NodePath("Area/CollisionShape:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 2.13736e-008, 0.488976 ) ]
}
tracks/5/type = "transform"
tracks/5/path = NodePath("Area/MeshInstanceButtonPressed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = PoolRealArray(  )
tracks/6/type = "value"
tracks/6/path = NodePath("Area/MeshInstanceButtonPressed:translation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -3.03493e-008, -0.694309 ), Vector3( 0, -9.26605e-009, -0.211983 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Area/MeshInstanceButtonPressed:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.75, 0.75, 0.5 ), Vector3( 0.75, 0.75, 0.5 ) ]
}

[sub_resource type="CapsuleMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
vertex_color_use_as_albedo = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CapsuleMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.517647, 0.0627451, 0.0627451, 1 )
emission_enabled = true
emission = Color( 0.4, 0.00784314, 0.00784314, 1 )
emission_energy = 5.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CapsuleShape" id=8]
radius = 0.981721

[node name="Button" type="StaticBody"]
collision_mask = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.04, 0, 0, 0, 0.662598, 0, 0, 0, 0.04, 0, 0.705121, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.828247, 0, 0, 0, 1, 0, 0.707402, 0 )
shape = SubResource( 2 )

[node name="Pressed" type="AnimationPlayer" parent="."]
anims/Press = SubResource( 3 )

[node name="Area" type="Area" parent="."]
transform = Transform( 0.04, 0, 0, 0, -1.74846e-009, -0.04, 0, 0.04, -1.74846e-009, 0, 1.35141, 0 )
collision_mask = 2

[node name="MeshInstanceButton" type="MeshInstance" parent="Area"]
transform = Transform( 0.75, 0, 0, 0, 0.75, -1.65793e-014, 0, 2.4869e-014, 0.5, 0, -3.03493e-008, -0.694309 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="MeshInstanceButtonPressed" type="MeshInstance" parent="Area"]
transform = Transform( 0.75, 0, 0, 0, 0.75, -2.84217e-014, 0, 4.26326e-014, 0.5, 0, -3.03493e-008, -0.694309 )
visible = false
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, -3.55271e-015, 0, 3.55271e-015, 1, 0, 0, 0 )
shape = SubResource( 8 )
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
